--- a/src/FrontEnd/Consola/Interfaz_Consola.form
+++ b/src/FrontEnd/Consola/Interfaz_Consola.form
@@ -112,7 +112,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButton4">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Limiar Consolas"/>
+        <Property name="text" type="java.lang.String" value="Limpiar Consolas"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
